--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -170,7 +170,7 @@ section {
     background: var(--secondary-color);
     color: var(--primary-color);
     font-weight: 400;
-    transition: font-weight 0.3s ease;
+    transition: all 1s ease-in-out;
 }
 
 #button_p:hover {
