Added Undraggable Effect

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -245,3 +245,12 @@ section {
 .intro_sec .h_bg-image {
     filter: saturate(0.5);
 }
+
+.no-drag {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-drag: none;
+    pointer-events: none;
+}
